--- a/index.html
+++ b/index.html
@@ -1,11 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BMI App</title>
-</head>
-<body>
-    
-</body>
+    <!-- css styles -->
+    <link rel="stylesheet" href="./assets/CSS/style.css" />
+    <!-- fontawesome cdn -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- poppins font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <main id="container">
+      <section id="img">
+        <img
+          src="./assets/images/illustration.svg"
+          alt="personal trainer illustration"
+        />
+      </section>
+      <section id="calculator">
+        <form id="form">
+          <h1 id="title">BMI Calculator</h1>
+          <div class="input-box">
+            <label for="weight"> Weight in KG </label>
+            <div class="input-field">
+              <i class="fa-solid fa-weight-hanging"></i>
+              <input type="number" id="weight" required />
+              <span>Kg</span>
+            </div>
+          </div>
+
+          <div class="input-box">
+            <label for="height"> Height in meters </label>
+            <div class="input-field">
+              <i class="fa-solid fa-ruler"></i>
+              <input type="number" id="height" required />
+              <span>M</span>
+            </div>
+          </div>
+
+          <button id="calculate">Calculate</button>
+
+          <div id="infos" class="hidden">
+            <div id="result">
+              <div id="bmi">
+                <span id="value"></span>
+                <span>Your BMI</span>
+              </div>
+              <div id="description">
+                <span></span>
+              </div>
+            </div>
+            <div id="more-info">
+              <a href="https://patient.info/doctor/bmi-calculator"
+                >More information on BMI
+                <i class="fa-solid fa-arrow-up-right-from-square"></i
+              ></a>
+            </div>
+          </div>
+        </form>
+      </section>
+    </main>
+  </body>
 </html>
