Added BMI calculation with description logic and form submit handler

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <label for="height"> Height in meters </label>
             <div class="input-field">
               <i class="fa-solid fa-ruler"></i>
-              <input type="number" id="height" required />
-              <span>M</span>
+              <input type="number" id="height" required step="any"/>
+              <span>m</span>
             </div>
           </div>
 
@@ -73,5 +73,7 @@
         </form>
       </section>
     </main>
+
+    <script src="./assets/JS/script.js"></script>
   </body>
 </html>
